fix translations to match the new structure

--- a/src/content/docs/zh-cn/reference/error-reference.mdx
+++ b/src/content/docs/zh-cn/reference/error-reference.mdx
@@ -1,5 +1,4 @@
 ---
-layout: ~/layouts/MainLayout.astro
 title: 错误参考
 i18nReady: false
 githubURL: https://github.com/withastro/astro/blob/main/packages/astro/src/core/errors/errors-data.ts
@@ -9,6 +8,7 @@ githubURL: https://github.com/withastro/astro/blob/main/packages/astro/src/core/
 
 ## Astro 错误
 
+- [**UnknownCompilerError**](/zh-cn/reference/errors/unknown-compiler-error/) (E01000)<br/>Unknown compiler error.
 - [**StaticRedirectNotAvailable**](/zh-cn/reference/errors/static-redirect-not-available/) (E03001)<br/>`Astro.redirect` is not available in static mode.
 - [**ClientAddressNotAvailable**](/zh-cn/reference/errors/client-address-not-available/) (E03002)<br/>`Astro.clientAddress` is not available in current adapter.
 - [**StaticClientAddressNotAvailable**](/zh-cn/reference/errors/static-client-address-not-available/) (E03003)<br/>`Astro.clientAddress` is not available in static mode.
@@ -29,23 +29,30 @@ githubURL: https://github.com/withastro/astro/blob/main/packages/astro/src/core/
 - [**NoMatchingImport**](/zh-cn/reference/errors/no-matching-import/) (E03018)<br/>No import found for component.
 - [**InvalidPrerenderExport**](/zh-cn/reference/errors/invalid-prerender-export/) (E03019)<br/>Invalid prerender export.
 - [**InvalidComponentArgs**](/zh-cn/reference/errors/invalid-component-args/) (E03020)<br/>Invalid component arguments.
+- [**PageNumberParamNotFound**](/zh-cn/reference/errors/page-number-param-not-found/) (E03021)<br/>Page number param not found.
+- [**UnknownViteError**](/zh-cn/reference/errors/unknown-vite-error/) (E04000)<br/>Unknown Vite Error.
 - [**FailedToLoadModuleSSR**](/zh-cn/reference/errors/failed-to-load-module-ssr/) (E04001)<br/>Could not import file.
 - [**InvalidGlob**](/zh-cn/reference/errors/invalid-glob/) (E04002)<br/>Invalid glob pattern.
 ## CSS 错误
 
+- [**UnknownCSSError**](/zh-cn/reference/errors/unknown-csserror/) (E05000)<br/>Unknown CSS Error.
 - [**CSSSyntaxError**](/zh-cn/reference/errors/csssyntax-error/) (E05001)<br/>CSS Syntax Error.
 ## Markdown 错误
 
+- [**UnknownMarkdownError**](/zh-cn/reference/errors/unknown-markdown-error/) (E06000)<br/>Unknown Markdown Error.
 - [**MarkdownFrontmatterParseError**](/zh-cn/reference/errors/markdown-frontmatter-parse-error/) (E06001)<br/>Failed to parse Markdown frontmatter.
 - [**InvalidFrontmatterInjectionError**](/zh-cn/reference/errors/invalid-frontmatter-injection-error/) (E06003)<br/>Invalid frontmatter injection.
 - [**MdxIntegrationMissingError**](/zh-cn/reference/errors/mdx-integration-missing-error/) (E06004)<br/>MDX integration missing.
+- [**UnknownConfigError**](/zh-cn/reference/errors/unknown-config-error/) (E07000)<br/>Unknown configuration error.
 - [**ConfigNotFound**](/zh-cn/reference/errors/config-not-found/) (E07001)<br/>Specified configuration file not found.
 - [**ConfigLegacyKey**](/zh-cn/reference/errors/config-legacy-key/) (E07002)<br/>Legacy configuration detected.
 ## CLI 错误
 
+- [**UnknownCLIError**](/zh-cn/reference/errors/unknown-clierror/) (E08000)<br/>Unknown CLI Error.
 - [**GenerateContentTypesError**](/zh-cn/reference/errors/generate-content-types-error/) (E08001)<br/>Failed to generate content types.
 ## 内容集合错误
 
+- [**UnknownContentCollectionError**](/zh-cn/reference/errors/unknown-content-collection-error/) (E09000)<br/>Unknown Content Collection Error.
 - [**InvalidContentEntryFrontmatterError**](/zh-cn/reference/errors/invalid-content-entry-frontmatter-error/) (E09001)<br/>Content entry frontmatter does not match schema.
 - [**InvalidContentEntrySlugError**](/zh-cn/reference/errors/invalid-content-entry-slug-error/) (E09002)<br/>Invalid content entry slug.
 - [**ContentSchemaContainsSlugError**](/zh-cn/reference/errors/content-schema-contains-slug-error/) (E09003)<br/>Content Schema should not contain `slug`.
