--- a/src/content/docs/zh-cn/reference/errors/only-response-can-be-returned.mdx
+++ b/src/content/docs/zh-cn/reference/errors/only-response-can-be-returned.mdx
@@ -1,11 +1,10 @@
 ---
-layout: ~/layouts/MainLayout.astro
 title: Invalid type returned by Astro page.
 i18nReady: true
 githubURL: https://github.com/withastro/astro/blob/main/packages/astro/src/core/errors/errors-data.ts
 ---
 
-> 路由返回了 `RETURNED_VALUE`。Astro 文件只能返回响应。(E03005)
+> 路由页面返回了一个错误的返回值 `RETURNED_VALUE`。在 Astro 文件中只能返回 `Response`。(E03005)
 
 ## 哪里出了问题？
 在 Astro 文件中只能返回 [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response) 的实例。
