--- a/src/content/docs/ko/getting-started.mdx
+++ b/src/content/docs/ko/getting-started.mdx
@@ -2,8 +2,8 @@
 title: 시작하기
 description: Astro 기본 소개 내용입니다.
 ---
-import Button from '../../components/Button.astro'
-import ContributorList from '../../components/ContributorList.astro'
+import Button from '~/components/Button.astro'
+import ContributorList from '~/components/ContributorList.astro'
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
 :::tip[Astro 버전 2 출시!]
