--- a/src/content/docs/es/guides/deploy/sst.mdx
+++ b/src/content/docs/es/guides/deploy/sst.mdx
@@ -12,7 +12,7 @@ Además, puedes usar cualquier construcción SST adicional como Cron Jobs, Bucke
 ## Inicio rápido
 
 1. Crea un proyecto Astro.
-1. Ejecuta `npx create-sst@rc`
+1. Ejecuta `npx create-sst`
 1. Debería detectar que estás usando Astro y pedirte confirmación.
 1. Una vez que estés listo para el despliegue, puedes ejecutar `npx sst deploy --stage=production`
 
