even friendlier CLI!

--- a/src/content/docs/en/reference/cli-reference.mdx
+++ b/src/content/docs/en/reference/cli-reference.mdx
@@ -13,7 +13,7 @@ You can use the Command-Line Interface (CLI) provided by Astro to develop, build
 
 Use the CLI by running one of the **commands** documented on this page with your preferred package manager, optionally followed by any **flags**. Flags customize the behavior of a command.
 
-One of the commands you'll use most often is `astro dev` to start the development server to see an updating preview of your site in a browser:
+One of the commands you'll use most often is `astro dev`. This command starts the development server and gives you a live, updating preview of your site in a browser as you work:
 
 <PackageManagerTabs>
   <Fragment slot="npm">
