some Components page tidying - slots!

--- a/src/content/docs/en/core-concepts/astro-components.mdx
+++ b/src/content/docs/en/core-concepts/astro-components.mdx
@@ -196,13 +196,15 @@ import Wrapper from '../components/Wrapper.astro';
 </Wrapper>
 ```
 
-This pattern is the basis of an Astro layout component: an entire page of HTML content can be “wrapped” with `<Layout></Layout>` tags and sent to the Layout component to render inside of common page elements.
+This pattern is the basis of an [Astro layout component](/en/core-concepts/layouts/): an entire page of HTML content can be “wrapped” with `<SomeLayoutComponent></SomeLayoutComponent>` tags and sent to the component to render inside of common page elements defined there.
 
 
 
 ### Named Slots
 
 An Astro component can also have named slots. This allows you to pass only HTML elements with the corresponding slot name into a slot's location.
+
+Slots are named using the `name` attribute:
 
 ```astro /<slot .*?/>/
 ---
@@ -223,6 +225,9 @@ const { title } = Astro.props
   <slot name="after-footer"/>  <!--  children with the `slot="after-footer"` attribute will go here -->
 </div>
 ```
+
+To inject HTML content into a particular slot, use the `slot` attribute on any child element to specify the name of the slot. All other child elements of the component will be injected into the default (unnamed) `<slot />`.
+
 
 ```astro /slot=".*?"/
 ---
@@ -271,7 +276,7 @@ const { title } = Astro.props
 
 ## HTML Components
 
-Astro supports importing and using `.html` files as components or placing these files within the `src/pages` subdirectory as pages. You may want to use HTML components if you're reusing code from an existing site built without a framework, or if you want to ensure that your component has no dynamic features.
+Astro supports importing and using `.html` files as components or placing these files within the `src/pages/` subdirectory as pages. You may want to use HTML components if you're reusing code from an existing site built without a framework, or if you want to ensure that your component has no dynamic features.
 
 HTML components must contain only valid HTML, and therefore lack key Astro component features:
 - They don't support frontmatter, server-side imports, or dynamic expressions.
