minor tidying of Astro syntax as a standalone page

--- a/src/content/docs/en/core-concepts/astro-syntax.mdx
+++ b/src/content/docs/en/core-concepts/astro-syntax.mdx
@@ -6,12 +6,12 @@ i18nReady: false
 
 **If you know HTML, you already know enough to write your first Astro component.**
 
-Astro component syntax is a superset of HTML. The syntax was [designed to feel familiar to anyone with experience writing HTML or JSX](#differences-between-astro-and-jsx), and adds support for including components and JavaScript expressions. You can spot an Astro component by its file extension: `.astro`.
+Astro component syntax is a superset of HTML. The syntax was [designed to feel familiar to anyone with experience writing HTML or JSX](#differences-between-astro-and-jsx), and adds support for including components and JavaScript expressions.
 
 
 ## JSX-like Expressions
 
-You can define local JavaScript variables inside of the frontmatter component script within an Astro component. You can then inject these variables into the component's HTML template using JSX-like expressions!
+You can define local JavaScript variables inside of the frontmatter component script between the two code fences (`---`) of an Astro component. You can then inject these variables into the component's HTML template using JSX-like expressions!
 
 :::note[dynamic vs reactive]
 Using this approach, you can include **dynamic** values that are calculated in the frontmatter.  But once included, these values are not **reactive** and will never change. Astro components are templates that only run once, at build time.
