--- a/src/content/docs/en/guides/cms/tina-cms.mdx
+++ b/src/content/docs/en/guides/cms/tina-cms.mdx
@@ -5,15 +5,41 @@ type: cms
 stub: true
 service: Tina CMS
 ---
+import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
 [Tina CMS](https://www.tina.io/) is a Git-backed headless content management system.
 
-## Installation 
-[Tina Documentation](https://tina.io/docs/introduction/tina-init/)
+## Integrating with Astro
 
-Depending on your package manager of choice, to install Tina first run `npx @tinacms/cli@latest init` or `pnpx @tinacms/cli@latest init`. After this has finished, you should now have a `.tina` folder in the root of your project and an `admin` folder in your public directory. It will also create a markdown file at `content/posts/hello-world.md`. Feel free to delete this hello world file and it's enclosing folders. 
+To get started, you'll need an existing Astro project. 
 
-You will want to change the dev script in package.json to:
+1. Run the following command to install Tina into your Astro project.
+
+<PackageManagerTabs>
+  <Fragment slot="npm">
+  ```shell
+  npx @tinacms/cli@latest init
+  ```
+  </Fragment>
+  <Fragment slot="pnpm">
+  ```shell
+  pnpx @tinacms/cli@latest init
+  ```
+  </Fragment>
+  <Fragment slot="yarn">
+  ```shell
+  yarn dlx @tinacms/cli@latest init
+  ```
+  </Fragment>
+</PackageManagerTabs>
+
+- When prompted for a Cloud ID, press enter-you'll generate one later if you want to use Tina Cloud.
+- When prompted "What framework are you using", choose **Other**.
+- When asked where public assets are stored, press enter.
+
+After this has finished, you should now have a `.tina` folder in the root of your project and an `admin` folder in your public directory. It will also create a markdown file at `content/posts/hello-world.md`.
+ 
+2. Change  the `dev` script in `package.json`:
 
 ```json
 // package.json
@@ -24,11 +50,14 @@ You will want to change the dev script in package.json to:
 ...
 ```
 
-**Make sure to replace "pnpm" in the above line with your package manager of choice.**
+Make sure to replace "pnpm" in the above line with the name of the package manager you're using.
 
-You will now need to set your collections. This is done in the `.tina/config.ts` file. A config file with a basic posts collection may look something like this:
+3. TinaCMS is now set up in local mode. Test this by running the dev server, then navigating to `/admin/index.html#/collections/post`.
+Editing the _Hello, World!_ post will update the `content/posts/hello-world.md` file in your project directory.
 
-```js
+4. Set up your collections by editing the `schema.collections` property in `.tina/config.ts`. For example, we can add a required "date posted" frontmatter property to our posts:
+
+```js title=".tina/config.ts" ins={35-40}
 import { defineConfig } from "tinacms";
 
 // Your hosting provider likely exposes this as an environment variable
@@ -63,30 +92,18 @@ export default defineConfig({
             isTitle: true,
             required: true,
           },
-          {
-            type: "string",
-            name: "description",
-            label: "Description",
-            required: true,
-          },
-          {
-            type: "string",
-            name: "pubDate",
-            label: "PubDate",
-            required: true,
-          },
-          {
-            type: "boolean",
-            name: "draft",
-            label: "Draft",
-          },
-          {
-            type: "string",
-            name: "body",
-            isBody: true,
-            label: "Body",
-            required: true,    
-          }
+					{
+						type: "datetime",
+						name: "posted",
+						label: "Date Posted",
+						required: true,
+					},
+					{
+						type: "rich-text",
+						name: "body",
+						label: "Body",
+						isBody: true,
+					},  
         ],
       },
     ],
@@ -94,6 +111,7 @@ export default defineConfig({
 });
 ```
 
-More information on collections can be found in the Tina docs [here](https://tina.io/docs/reference/collections/). If you have set everything up correctly, on running `pnpm run dev` your should now be able to navigate to `localhost:3000/admin/index.html` and see your collections for editing in TinaCMS.
+Learn more about collections in the Tina docs [here](https://tina.io/docs/reference/collections/).
 
-To set up TinaCMS for production, you will either need to use Tina Cloud or self host the Tina Data Layer which can be achieved as a severless function. For more information on this, please see the "Going To Production" section of the Tina docs, starting [here](https://tina.io/docs/tina-cloud/).
+5. In production, TinaCMS can commit changes directly to your GitHub repository. To set up TinaCMS for production, you can choose to use [Tina Cloud](https://app.tina.io/register) or self-host the [Tina Data Layer](https://tina.io/docs/self-hosted/overview/). Follow the Tina Docs [here](https://tina.io/docs/tina-cloud/).
+
