--- a/src/content/docs/en/guides/cms/tina-cms.mdx
+++ b/src/content/docs/en/guides/cms/tina-cms.mdx
@@ -55,7 +55,7 @@ Make sure to replace "pnpm" in the above line with the name of the package manag
 3. TinaCMS is now set up in local mode. Test this by running the dev server, then navigating to `/admin/index.html#/collections/post`.
 Editing the _Hello, World!_ post will update the `content/posts/hello-world.md` file in your project directory.
 
-4. Set up your collections by editing the `schema.collections` property in `.tina/config.ts`. For example, we can add a required "date posted" frontmatter property to our posts:
+4. Set up your collections by editing the `schema.collections` property in `.tina/config.ts`. For example, you can add a required "date posted" frontmatter property to our posts:
 
 ```js title=".tina/config.ts" ins={35-40}
 import { defineConfig } from "tinacms";
