Update ElianCodes integrations
Since last week, the elian.codes website uses other integrations, I've updated them

--- a/src/content/docs/en/integrations/integrations.mdx
+++ b/src/content/docs/en/integrations/integrations.mdx
@@ -30,7 +30,7 @@ Check out our new [integrations library](https://astro.build/integrations/), and
 
 [Astro Docs](https://github.com/withastro/docs) - Our own docs use Algolia search in Astro!
 
-[Elian Codes](https://www.elian.codes/) - Astro / Firebase / Tailwind
+[Elian Codes](https://www.elian.codes/) - Astro / Vercel / UnoCSS
 
 
 ## Blog Posts / Videos
