docs: improve wording for cypress testing guide

--- a/src/content/docs/en/guides/testing.mdx
+++ b/src/content/docs/en/guides/testing.mdx
@@ -18,18 +18,11 @@ See the [Astro + Vitest starter template](https://github.com/withastro/astro/tre
 
 ## Cypress
 
-Cypress is a next generation front end testing tool built for the modern web. Cypress enables you to write all types of tests:
-
-* End-to-end tests
-* Component tests
-* Integration tests
-* Unit tests
-
-Cypress can test anything that runs in a browser.
+Cypress is a front-end testing tool built for the modern web. Cypress enables you to write end-to-end tests for your Astro site.
 
 ### Installation
 
-You can install Cypress within your Astro project using the package manager of your choice.
+You can install Cypress using the package manager of your choice.
 
 <PackageManagerTabs>
   <Fragment slot="npm">
@@ -53,9 +46,9 @@ You can install Cypress within your Astro project using the package manager of y
 
 ### Configuration
 
-In the root of your project, create a `cypress.config.ts` file with the following content:
+In the root of your project, create a `cypress.config.js` file with the following content:
 
-```json
+```js title="cypress.config.js"
 import { defineConfig } from 'cypress'
 
 export default defineConfig({
@@ -83,7 +76,7 @@ export default defineConfig({
     </html>
     ```
 
-2. Create an `index.spec.js` file in the `cypress/e2e` folder. Copy and paste the following test into the file to verify that the page title is correct. Update the value of the page `<title>` to match the page you are testing. 
+2. Create an `index.spec.js` file in the `cypress/e2e` folder. Use the following test into the file to verify that the page title and header are correct.
 
     ```js title="cypress/e2e/index.cy.ts"
     it('titles are correct', () => {
@@ -100,11 +93,9 @@ export default defineConfig({
 
 ### Running your Cypress tests
 
-You can run a single test or several tests at once, testing one or multiple browsers. By default, Cypress uses a built-in instance of [Electron](https://www.electronjs.org/) to run your tests, and it also [supports](https://docs.cypress.io/guides/guides/launching-browsers) Firefox and Chrome-family browsers (including Edge).
-
 Cypress can be run from the command line or from the Cypress App. The App provides a visual interface for running and debugging your tests.
 
-To run our test from the previous example using the command line, execute the following command:
+First, start the dev server so Cypress can access your live site. To run our test from the previous example using the command line, execute the following command:
 
 ```shell
 npx cypress run
@@ -116,7 +107,7 @@ To run the test using the Cypress App, execute the following command:
 npx cypress open
 ```
 
-Once the Cypress App is launched, choose **E2E Testing**, and the browser that will be used to run tests.
+Once the Cypress App is launched, choose **E2E Testing**, then select the browser to be used to run tests.
 
 ### Next steps
 
