--- a/src/content/docs/en/guides/cms/tina-cms.mdx
+++ b/src/content/docs/en/guides/cms/tina-cms.mdx
@@ -111,7 +111,7 @@ export default defineConfig({
 });
 ```
 
-Learn more about collections in the Tina docs [here](https://tina.io/docs/reference/collections/).
+Learn more about collections [in the Tina docs](https://tina.io/docs/reference/collections/).
 
-5. In production, TinaCMS can commit changes directly to your GitHub repository. To set up TinaCMS for production, you can choose to use [Tina Cloud](https://app.tina.io/register) or self-host the [Tina Data Layer](https://tina.io/docs/self-hosted/overview/). Follow the Tina Docs [here](https://tina.io/docs/tina-cloud/).
+5. In production, TinaCMS can commit changes directly to your GitHub repository. To set up TinaCMS for production, you can choose to use [Tina Cloud](https://app.tina.io/register) or self-host the [Tina Data Layer](https://tina.io/docs/self-hosted/overview/). Continue in [the Tina Docs](https://tina.io/docs/tina-cloud/).
 
