--- a/src/content/docs/en/guides/recipes.mdx
+++ b/src/content/docs/en/guides/recipes.mdx
@@ -3,26 +3,35 @@ title: All Recipes
 description: See guided examples of building features in Astro.
 i18nReady: false
 ---
-
+import RecipeBox from '~/components/recipes/RecipeBox.astro';
+import BackToRecipes from '~/components/recipes/BackToRecipes.astro';
 
 See guided examples of adding features to your Astro project.
 
 
 ## Curated Recipes
 
+<RecipeBox icon="clipboard-check">
+  <a href="/en/guides/rss/">Add an RSS feed</a>
+</RecipeBox>
 
-{/* Existing guide pages that are to be removed from sidebar and be accessible via recipes */}
+<RecipeBox icon="puzzle-piece">
+  <a href="/en/guides/fonts/">Add custom fonts</a>
+</RecipeBox>
 
+<RecipeBox icon="puzzle-piece">
+  <a href="/en/guides/recipes/nanostores/">Build an eCommerce cart flyout with nanostores</a>
+</RecipeBox>
 
-[Add an RSS feed](/en/guides/rss/)
+<RecipeBox icon="puzzle-piece">
+  <a href="/en/guides/recipes/captcha/">Verify a Captcha</a>
+</RecipeBox>
 
-[Add custom fonts](/en/guides/fonts/)
+<RecipeBox icon="puzzle-piece">
+  <a href="/en/guides/recipes/add-yaml-support/">Add support for importing YAML</a>
+</RecipeBox>
 
-[Build an eCommerce cart flyout with nanostores](/en/guides/recipes/nanostores/)
-
-[Verify a Captcha](/en/guides/recipes/captcha/)
-
-[Add support for importing YAML](/en/guides/recipes/add-yaml-support/)
+<BackToRecipes />
 
 ## Community Resources
 
