--- a/src/content/docs/zh-cn/install/auto.mdx
+++ b/src/content/docs/zh-cn/install/auto.mdx
@@ -4,7 +4,7 @@ description: 如何通过 create-astro 命令行工具使用 NPM、PNPM 或 Yarn
 ---
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
-准备好安装 Astro 了吗？按照本指南开始使用 create astro CLI。
+准备好安装 Astro 了吗？按照本指南开始使用 `create astro` CLI。
 
 :::note[更喜欢手动安装 ASTRO？]
 请阅读我们的[分步手动安装指南](/zh-cn/install/manual/)。
@@ -18,7 +18,7 @@ import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
 #### 安装
 
-`create astro` 命令是从零开始一个全新的 Astro 项目最快、最简单的方法。它将引导你完成设置新 Astro 项目的每一步。 它允许你从几个不同的官方入门模板中进行选择，你也可以[传递--template 参数来使用 GitHub 上的任何现有项目](#入门模板)。
+`create astro` 是从头开始新 Astro 项目的最快方式。它将引导你完成设置新 Astro 项目的每一步。 它允许你从几个不同的官方入门模板中进行选择，你也可以[传递--template 参数来使用 GitHub 上的任何现有项目](#入门模板)。
 
 :::tip[在线预览]
 想要在浏览器中试用 Astro？ 访问 [astro.new](https://astro.new/) 浏览我们的入门模板并在不离开浏览器的情况下启动一个新的 Astro 项目。
@@ -122,7 +122,7 @@ Astro 将实时监听 `src/` 目录中的文件更改，因此你在开发过程
 
 默认情况下，此命令将使用模板仓库的`main`分支。要使用不同的分支，请将其作为 `--template` 参数的一部分传递：`<github-username>/<github-repo>#<branch>`。
 
-探索我们的[主题和入门展示](https://astro.build/themes/)，您可以在其中浏览博客、个人作品集、文档、落地页等主题！ 或者，[在 GitHub 上搜索](https://github.com/search?o=desc&q=astro+starter&s=stars&type=Repositories)更多入门项目。
+探索我们的[主题和入门展示](https://astro.build/themes/)，你可以在其中浏览博客、个人作品集、文档、落地页等主题！ 或者，[在 GitHub 上搜索](https://github.com/search?o=desc&q=astro+starter&s=stars&type=Repositories)更多入门项目。
 
 
 ## 接下来...
@@ -135,4 +135,4 @@ Astro 将实时监听 `src/` 目录中的文件更改，因此你在开发过程
 
 📚 **部署你的网站**：在我们的[部署指南](/zh-cn/guides/deploy/)中了解如何构建 Astro 项目并将其部署到网络。
 
-📚 **了解您的代码库**：在我们的[项目结构指南](/zh-cn/core-concepts/project-structure/)中了解更多关于 Astro 项目结构的信息。
+📚 **了解你的代码库**：在我们的[项目结构指南](/zh-cn/core-concepts/project-structure/)中了解更多关于 Astro 项目结构的信息。
