--- a/src/content/docs/zh-cn/install/manual.mdx
+++ b/src/content/docs/zh-cn/install/manual.mdx
@@ -121,7 +121,7 @@ console.log('它运行在终端而非浏览器！');
 
 针对该教程，复制并粘贴以下内容至 `robots.txt` 内：
 
-```
+```diff title="public/robots.txt"
 # 示例：运行所有爬虫抓取并索引你的站点。
 # 全部语法：https://developers.google.com/search/docs/advanced/robots/create-robots-txt
 User-agent: *
