Specify that WOFF fonts are only accepted for now as a local font

--- a/src/content/docs/en/guides/fonts.mdx
+++ b/src/content/docs/en/guides/fonts.mdx
@@ -19,6 +19,10 @@ If you want to add font files to your project, we recommend adding them to your 
 
 Let’s imagine you have a `DistantGalaxy.woff` font file.
 
+:::note
+WOFF formats only are accepted for now. 
+:::
+
 1. Add your font file to `public/fonts/`.
 
 2. Add an `@font-face` statement to your CSS. This could be in a global `.css` file you import or in a `<style>` block in the layout or component where you want to use this font.
