Add note about the `allowJs` tsconfig compiler option in `content-collections.mdx` (#2646)
* add `allowJs` note

* make sentence more clear

* make note a bit more clear

* apply review suggestion

Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>

* make note a paragraph

---------

Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>

--- a/src/content/docs/en/guides/content-collections.mdx
+++ b/src/content/docs/en/guides/content-collections.mdx
@@ -120,6 +120,18 @@ If you **do not** already extend Astro's `strict` or `strictest` recommended Typ
 }
 ```
 
+If you use `.js` or `.mjs` files in an Astro project, you can enable IntelliSense and type checking in your editor by enabling `allowJs` in your `tsconfig.json`:
+```json title="tsconfig.json" ins={6}
+{
+  // Note: No change needed if you use "astro/tsconfigs/strict" or "astro/tsconfigs/strictest"
+  "extends": "astro/tsconfigs/base",
+  "compilerOptions": {
+    "strictNullChecks": true,
+    "allowJs": true
+  }
+}
+```
+
 ### Defining a collection schema
 
 Schemas enforce consistent frontmatter within a collection. A schema **guarantees** that your frontmatter exists in a predictable form when you need to reference or query it. If any file violates its collection schema, Astro will provide a helpful error to let you know.
