--- a/src/content/docs/fr/guides/testing.mdx
+++ b/src/content/docs/fr/guides/testing.mdx
@@ -1,14 +1,14 @@
 ---
 title: Test
-description: Une introduction aux tests dans Astro
+description: Une introduction aux tests dans Astro 
 i18nReady: true
 ---
 
-import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro';
+import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
-Le test vous aide à écrire et à maintenir fonctionnel du code Astro. Astro supporte une variété d'outils populaires pour les tests unitaires, tests des Composants, et test de bout en bout tel que Jest, Mocha, Jasmine, Cypress et Playwright. Vous pouvez même installer des librairies de test spécifique au framework de votre choix, par exemple, React Testing Library pour tester les Composants UI de vos frameworks.
+Le test vous aide à écrire et à maintenir fonctionnel du code Astro. Astro supporte une variété d'outils populaires pour les tests unitaires, tests des Composants, et test de bout en bout tel que Jest, Mocha, Jasmine, Cypress et Playwright. Vous pouvez même installer des librairies de test spécifique au framework de votre choix, par exemple, React Testing Library pour tester les Composants UI de vos frameworks. 
 
-Tester vos frameworks vous permet de déclarer des **assertions** ou des **attentes** sur le comportement de votre code dans un cas spécifique et de les comparer vis-à-vis du comportement actuel de votre code.
+Tester vos frameworks vous permet de déclarer des **assertions** ou des **attentes** sur le comportement de votre code dans un cas spécifique et de les comparer vis-à-vis du comportement actuel de votre code. 
 
 ## Vittest
 
@@ -18,7 +18,7 @@ Veuillez voir [Astro + Vitest starter template](https://github.com/withastro/ast
 
 ## Playwright
 
-Playwright est un framework de test de bout en bout pour des applications webs modernes. Utilisez les API de Playwright en JavaScript ou TypeScript pour tester votre code Astro sur tous les moteurs de rendu tel que Chromium, WebKit et Firefox.
+Playwright est un framework de test de bout en bout pour des applications webs modernes. Utilisez les API de Playwright en JavaScript ou TypeScript pour tester votre code Astro sur tous les moteurs de rendu tel que Chromium, WebKit et Firefox. 
 
 ### Installation
 
@@ -27,9 +27,21 @@ Vous pouvez commencer par exécuter vos tests en utilisant [l'extension VS Code]
 Alternativement, vous pouvez aussi installer Playwright dans votre projet Astro via votre gestionnaire de packages préféré. Suivez les instructions CLI pour choisir entre JavaScript et TypeScript, nommer votre dossier, et optionellement ajoutez un workflow falcutatifs de Github Actions.
 
 <PackageManagerTabs>
-  <Fragment slot="npm">```shell npm init playwright@latest ```</Fragment>
-  <Fragment slot="pnpm">```shell pnpm dlx create-playwright ```</Fragment>
-  <Fragment slot="yarn">```shell yarn create playwright ```</Fragment>
+  <Fragment slot="npm">
+  ```shell
+  npm init playwright@latest
+  ```
+  </Fragment>
+  <Fragment slot="pnpm">
+  ```shell
+  pnpm dlx create-playwright
+  ```
+  </Fragment>
+  <Fragment slot="yarn">
+  ```shell
+  yarn create playwright
+  ```
+  </Fragment>
 </PackageManagerTabs>
 
 ### Créer votre premier test Playwright
@@ -39,14 +51,10 @@ Alternativement, vous pouvez aussi installer Playwright dans votre projet Astro 
 ```html title="src/pages/index.astro"
 ---
 ---
-
 <html lang="en">
   <head>
     <title>Astro is awesome!</title>
-    <meta
-      name="description"
-      content="Pull content from anywhere and serve it fast with Astro's next-gen island architecture."
-    />
+    <meta name="description" content="Pull content from anywhere and serve it fast with Astro's next-gen island architecture." />
   </head>
   <body></body>
 </html>
@@ -58,7 +66,7 @@ Alternativement, vous pouvez aussi installer Playwright dans votre projet Astro 
 import { test, expect } from '@playwright/test';
 
 test('meta is correct', async ({ page }) => {
-  await page.goto('http://localhost:3000/');
+  await page.goto("http://localhost:3000/");
 
   await expect(page).toHaveTitle('Astro is awesome!');
 });
@@ -68,18 +76,16 @@ test('meta is correct', async ({ page }) => {
 Pour un lien plus pratique, vous pouvez définir le [`"baseURL": "http://localhost:3000"`](https://playwright.dev/docs/api/class-testoptions#test-options-base-url) dans le fichier de configuration `playwright.config.ts` pour pouvoir utiliser `page.goto("/")` au lieu de `page.goto("http://localhost:3000/")`.  
 :::
 
-### Exécuter vos tests Playwright
+### Exécuter vos tests Playwright 
 
-Vous pouvez exécuter un ou plusieurs tests à la fois sur un ou plusieurs navigateurs. Par défaut, les resultats de vos tests seront montrés sur votre terminal. Si vous voulez le bilan complet et filtrer les resultats, ouvrez le HTML Test Reporter.
+Vous pouvez exécuter un ou plusieurs tests à la fois sur un ou plusieurs navigateurs. Par défaut, les resultats de vos tests seront montrés sur votre terminal. Si vous voulez le bilan complet et filtrer les resultats,  ouvrez le HTML Test Reporter.    
 
 1. Pour exécuter nos tests sur l'exemple précedant par commande de ligne, utilisez la commande `test`. Incluez le nom du fichier à tester si vous voulez exécuter un test singulier:
-
 ```sh
 npx playwright test index.spec.ts
 ```
 
 2. Pour voir le bilan HTML complet, tapez la commande suivante:
-
 ```sh
 npx playwright show-report
 ```
@@ -91,6 +97,7 @@ Executez vos tests contre le code de production pour mieux ressembler à votre s
 #### Avancé: Lancer un serveur de dévelopment pendant les tests
 
 Quand vous exécutez vos scripts de test, vous pouvez aussi avoir Playwright lancer votre serveur en utilisant l'option [`webServer`](https://playwright.dev/docs/test-advanced#launching-a-development-web-server-during-the-tests) dans le fichier de configuration Playwright.
+
 
 Voici un exemple des configurations et commandes via Yarn:
 
@@ -113,7 +120,6 @@ const config: PlaywrightTestConfig = {
 };
 export default config;
 ```
-
 3. Exécutez `yarn build`, ensuite exécutez `yarn test:e2e` pour lancer les tests Playwright.
 
 Pour plus d'information, veuillez voir les liens ci-dessous:
