remark-toc disclaimer

--- a/src/content/docs/en/guides/markdown-content.mdx
+++ b/src/content/docs/en/guides/markdown-content.mdx
@@ -469,6 +469,8 @@ export default defineConfig({
 });
 ```
 
+Note that by default, `remarkToc` requires a "ToC" or "Table of Contents" heading on the page to show the table of contents.
+
 #### Heading IDs and plugins
 
 Astro injects an `id` attribute into all heading elements (`<h1>` to `<h6>`) in Markdown and MDX files and provides a `getHeadings()` utility for retrieving these IDs in [Markdown exported properties](#exported-properties).
