--- a/src/content/docs/en/guides/markdown-content.mdx
+++ b/src/content/docs/en/guides/markdown-content.mdx
@@ -469,7 +469,7 @@ export default defineConfig({
 });
 ```
 
-Note that by default, `remarkToc` requires a "ToC" or "Table of Contents" heading on the page to show the table of contents.
+Note that by default, `remarkToc` requires a "ToC" or "Table of Contents" [heading](https://github.com/remarkjs/remark-toc#optionsheading) (case-insensitive) on the page to show the table of contents.
 
 #### Heading IDs and plugins
 
