--- a/src/content/docs/en/reference/cli-reference.mdx
+++ b/src/content/docs/en/reference/cli-reference.mdx
@@ -178,11 +178,11 @@ Specifies the path to the config file relative to the project root. Defaults to 
 astro --config config/astro.config.mjs dev
 ```
 
-### `--site`
+### `--site <url>`
 
 Configures the [`site`](/en/reference/configuration-reference/#site) for your project. Passing this flag will override the `site` value in your `astro.config.mjs` file, if one exists.
 
-### `--base`
+### `--base <pathname>`
 
 <Since v="1.4.1" />
 
