i18n(zh-cn): Translate tutorial/0-introduction/index.mdx and 1.mdx

--- a/src/content/docs/zh-cn/tutorial/0-introduction/1.mdx
+++ b/src/content/docs/zh-cn/tutorial/0-introduction/1.mdx
@@ -19,7 +19,7 @@ import Box from '~/components/tutorial/Box.astro';
 
 你把它们勾掉!
 
-在每个页面的末尾，你会发现一个可点击的任务清单，你现在应该能够做到。勾选这些项目，就可以在 "教程追踪 "中看到你的进展。
+在每个页面的末尾，你会发现一个可点击的任务清单，其中列出了你现在应该能够完成的任务。勾选这些项目，就可以在 "教程追踪 "中看到你的进展。
 
 使用跟踪器是可选的，但如果你在多次访问中完成教程，它可以帮助你记住你的位置。你也可以把一些核对表留空，以提醒你以后要重温的单元。
 
@@ -29,9 +29,9 @@ import Box from '~/components/tutorial/Box.astro';
 <details>
 <summary>我已经知道第一单元该做什么了。我可以跳过吗？</summary>
 
-你可以使用[Unit 1](/en/tutorial/1-setup/)里面的课程，确保你拥有完成教程所需的开发工具和账户。它将指导你创建一个新的 Astro 项目，将其存储在 GitHub 上，并将其部署到 Netlify。
+你可以使用[第一单元](/zh-cn/tutorial/1-setup/)里面的课程，确保你拥有完成教程所需的开发工具和账户。它将指导你创建一个新的 Astro 项目，将其存储在 GitHub 上，并将其部署到 Netlify。
 
-如果你[创建一个新的、空的Astro项目](/en/install/auto/)并对你的设置感到满意，你可以安全地跳到[第二单元](/en/tutorial/2-pages/)，你将开始在你的项目中制作新页面。
+如果你[已经创建了一个新的、空的Astro项目](/zh-cn/install/auto/)并对你的设置感到满意，你可以安全地跳到[第二单元](/en/tutorial/2-pages/)，你将开始在你的项目中制作新页面。
 </details>
 
 <details>
@@ -45,7 +45,7 @@ import Box from '~/components/tutorial/Box.astro';
 <details>
 <summary>我在哪里可以留下关于本教程的反馈？</summary>
 
-本教程是我们文档团队的一个项目。 你可以在 Discord 的“#docs”频道中找到我们，或将问题提交到 [GitHub 上的文档仓库](https://github.com/withastro/docs/issues)。 
+本教程是我们文档团队的一个项目。你可以在 Discord 的“#docs”频道中找到我们，或将问题提交到 [GitHub 上的文档仓库](https://github.com/withastro/docs/issues)。 
 </details>
 
 <Box icon="check-list">
