i18n(zh-cn): Translate tutorial/0-introduction/index.mdx and 1.mdx

--- a/src/content/docs/zh-cn/tutorial/0-introduction/1.mdx
+++ b/src/content/docs/zh-cn/tutorial/0-introduction/1.mdx
@@ -17,7 +17,7 @@ import Box from '~/components/tutorial/Box.astro';
 <details>
 <summary>如何使用每页底部的清单？</summary>
 
-你把它们勾掉!
+把它们勾掉!
 
 在每个页面的末尾，你会发现一个可点击的任务清单，其中列出了你现在应该能够完成的任务。勾选这些项目，就可以在 "教程追踪 "中看到你的进展。
 
