--- a/src/content/docs/zh-cn/guides/integrations-guide.mdx
+++ b/src/content/docs/zh-cn/guides/integrations-guide.mdx
@@ -1,8 +1,11 @@
 ---
 title: 使用集成
+i18nReady: true
 ---
 import IntegrationsNav from '~/components/IntegrationsNav.astro';
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
+
+
 
 使用 **Astro 集成**只需几行代码就能为你的项目添加新的功能和行为。你可以自己编写一个自定义的集成，可以使用官方集成，还可以使用社区内的集成。
 
@@ -70,7 +73,6 @@ import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 Astro 集成总是添加在 `astro.config.mjs` 文件中的 `integrations` 属性。
 
 有三种常见的方法来导入集成到你的 Astro 项目：
-
 1. 安装 npm 包集成。
 2. 从项目内部的本地文件导入你自己的集成。
 3. 直接在配置文件中内联编写集成。
@@ -115,6 +117,42 @@ integrations: [
   // 示例：不在 Windows 上构建网站地图
   process.platform !== 'win32' && sitemap()
 ]
+```
+
+## 移除集成
+
+要移除某个集成，首先从你的项目中卸载它
+
+<PackageManagerTabs>
+  <Fragment slot="npm">
+  ```shell
+  npm uninstall @astrojs/image
+  ```
+  </Fragment>
+  <Fragment slot="pnpm">
+  ```shell
+  pnpm uninstall @astrojs/image
+  ```
+  </Fragment>
+  <Fragment slot="yarn">
+  ```shell
+  yarn remove @astrojs/image
+  ```
+  </Fragment>
+</PackageManagerTabs>
+
+接下来，从 `astro.config.*` 文件中移除该集成：
+
+```js title="astro.config.mjs" del={3,7}
+import { defineConfig } from 'astro/config'
+
+import image from "@astrojs/image";
+
+export default defineConfig({
+  integrations: [
+    image()
+  ]
+})
 ```
 
 ## 寻找更多集成
