--- a/src/content/docs/zh-cn/guides/integrations-guide.mdx
+++ b/src/content/docs/zh-cn/guides/integrations-guide.mdx
@@ -95,7 +95,7 @@ export default defineConfig({
 })
 ```
 
-查看[集成 API](/zh-cn/reference/integrations-reference/)参考资料，了解所有不同地集成编写方式。
+查看[集成 API](/zh-cn/reference/integrations-reference/)参考资料，了解所有不同的集成编写方式。
 
 ### 自定义选项
 
@@ -110,7 +110,7 @@ integrations: [
 
 ### 切换集成
 
-你可以切换集成启用状态，而不用担心遗留的 `undefined` 和布尔值问题，Astro 会自动忽略禁用集成。
+你可以切换集成启用状态，而不用担心遗留的 `undefined` 和布尔值问题，Astro 会自动忽略假值的集成。
 
 ```js
 integrations: [
