Feat: check the translation up to line 61

--- a/src/content/docs/fr/guides/markdown-content.mdx
+++ b/src/content/docs/fr/guides/markdown-content.mdx
@@ -1,18 +1,37 @@
 ---
-title: Markdown
+title: Markdown & MDX
 description: Apprenez à créer du contenu en utilisant Markdown ou MDX avec Astro.
 ---
 
 import Since from '~/components/Since.astro'
-
+import FileTree from '~/components/FileTree.astro'
 
 Le [Markdown](https://daringfireball.net/projects/markdown/) est généralement utilisé pour écrire du contenu contenant beaucoup de texte, comme des articles de blog et de documentation. Astro inclut un support intégré pour les fichiers Markdown standards.
 
-Avec [l'intégration @astrojs/mdx](/fr/guides/integrations-guide/mdx/) installée, Astro supporte aussi les fichiers (`.mdx`) [MDX](https://mdxjs.com/) qui apportent des fonctionnalités supplémentaires, telles que la prise en charge des expressions et des composants JavaScript dans votre contenu Markdown.
+Avec [l'intégration @astrojs/mdx](/fr/guides/integrations-guide/mdx/) installée, Astro supporte aussi les fichiers [MDX](https://mdxjs.com/) (`.mdx`) qui apportent des fonctionnalités supplémentaires, telles que la prise en charge des expressions et des composants JavaScript dans votre contenu Markdown.
 
 Utilisez l'un ou les deux types de fichiers pour écrire du contenu Markdown !
 
 ## Pages Markdown et MDX
+
+### Collections de contenu
+
+Vous pouvez gérer vos fichiers Markdown et MDX dans Astro dans un dossier spécial `src/content/`. Les [collections de contenu](/fr/guides/content-collections/) vous aident à organiser votre contenu, à valider vos frontmatter et fournir un type-safety TypeScript automatique lorsque que vous travaillez sur votre contenu.
+You can manage your Markdown and MDX files in Astro in a special `src/content/` folder. [Content collections](/en/guides/content-collections/) help you organize your content, validate your frontmatter, and provide automatic TypeScript type-safety while working with your content.
+
+<FileTree>
+  - src/content/
+    - **newsletter/**
+      - week-1.md
+      - week-2.md
+    - **authors/**
+      - grace-hopper.md
+      - alan-turing.md
+</FileTree>
+
+
+
+Pour en savoir plus sur l'utilisation des [collections de contenu dans Astro](/fr/guides/content-collections/).
 
 ### Routage basé sur les fichiers
 
@@ -37,11 +56,11 @@ Ce n'est probablement pas suffisamment stylisé, mais le Markdown supporte :
 - Et plus encore !
 ```
 
-📚 En savoir plus à propos du [routage basé sur les fichiers](/fr/core-concepts/routing/) ou les options pour créer des [routes dynamiques](/fr/core-concepts/routing/#routes-dynamiques).
+📚 En savoir plus sur le [routage basé sur les fichiers d'Astro](/fr/core-concepts/routing/) ou les options pour créer des [routes dynamiques](/fr/core-concepts/routing/#routes-dynamiques).
 
 ### Pages Brouillons
 
-`draft: true` est une valeur optionnelle dans l'en-tête Markdown qui indique qu'une page ou un article Markdown ou MDX est "non publié". Par défaut, cette page sera :
+`draft: true` est une valeur optionnelle dans le frontmatter Markdown qui indique qu'une page ou un article Markdown ou MDX est "non publié". Par défaut, cette page sera :
 - exclus du site construit (**aucune page ne sera build**)
 - retourné par [`Astro.glob()`](/fr/reference/api-reference/#astroglob) (**visibles dans les listes d'article**)
 
