i18n(pt-BR): Small translation updates

--- a/src/content/docs/pt-br/guides/data-fetching.mdx
+++ b/src/content/docs/pt-br/guides/data-fetching.mdx
@@ -104,11 +104,9 @@ Seu site Astro após o deploy irá buscar os dados **uma vez, em tempo de build*
 
 ## Busque de um CMS Headless
 
-Busque conteúdo remoto de seu CMS favorito como Storyblok ou WordPress!
+Componentes Astro podem buscar dados de seu CMS favorito e então renderizá-lo como o conteúdo de sua página. Utilizando [rotas dinâmicas](/pt-br/core-concepts/routing/#rotas-dinâmicas), componentes podem até mesmo gerar páginas com base no conteúdo do seu CMS.
 
-Componentes Astro podem buscar dados de seu CMS e então renderizá-lo como o conteúdo de sua página. Utilizando [rotas dinâmicas](/pt-br/core-concepts/routing/#rotas-dinâmicas), componentes podem até mesmo gerar páginas com base no conteúdo do seu CMS.
-
-Aqui estão alguns exemplos de como essas buscas de dados parecem no Astro, com links para tutoriais completos abaixo.
+Veja nossos [Guias de CMS](/pt-br/guides/cms/) para mais detalhes em como integrar o Astro com CMSes headless incluindo Storyblok, Contentful e WordPress.
 
 ### Exemplo: API do Storyblok
 
