--- a/src/content/docs/pt-br/guides/rss.mdx
+++ b/src/content/docs/pt-br/guides/rss.mdx
@@ -95,6 +95,7 @@ export async function get(context) {
 Você pode configurar o esquema de sua coleção para garantir essas propriedades de RSS esperadas. Importe e aplique `rssSchema` para garantir que cada entrada da coleção produz um item válido no feed RSS.
 
 ```js title="src/content/config.ts" "rssSchema"
+import { defineCollection } from 'astro:content';
 import { rssSchema } from '@astrojs/rss';
 
 const blog = defineCollection({
@@ -146,8 +147,9 @@ Enquanto você estiver utilizando conteúdo HTML em XML, nós sugerimos utilizar
 
 Ao utilizar coleções de conteúdo, renderize o `body` da postagem utilizando um parser padrão de Markdown como [`markdown-it`](https://github.com/markdown-it/markdown-it) e sanitize o resultado:
 
-```js title="src/pages/rss.xml.js" ins={2, 3, 4, 14}
+```js title="src/pages/rss.xml.js" ins={3, 4, 5, 16}
 import rss from '@astrojs/rss';
+import { getCollection } from 'astro:content';
 import sanitizeHtml from 'sanitize-html';
 import MarkdownIt from 'markdown-it';
 const parser = new MarkdownIt();
