docs: fix broken syntax highlight in code block

--- a/src/content/docs/en/guides/markdown-content.mdx
+++ b/src/content/docs/en/guides/markdown-content.mdx
@@ -220,7 +220,7 @@ Don't forget to include a `client:directive` on your UI framework components, if
 
 See more examples of using import and export statements in the [MDX docs](https://mdxjs.com/docs/what-is-mdx/#esm).
 
-```astro title="src/pages/about.mdx" {5-6} /<.+\/>/
+```mdx title="src/pages/about.mdx" {5-6} /<.+\/>/
 ---
 layout: ../layouts/BaseLayout.astro
 title: About me
