--- a/src/content/docs/en/reference/api-reference.mdx
+++ b/src/content/docs/en/reference/api-reference.mdx
@@ -132,7 +132,7 @@ import Heading from '../components/Heading.astro';
 
 📚 Learn more about how [Markdown and MDX Layouts](/en/guides/markdown-content/#frontmatter-layout) handle props.
 
-📚 Learn how to add [Typescript type definitions for your props](/en/guides/typescript/#component-props).
+📚 Learn how to add [TypeScript type definitions for your props](/en/guides/typescript/#component-props).
 
 ### `Astro.params`
 
