--- a/src/content/docs/es/guides/imports.mdx
+++ b/src/content/docs/es/guides/imports.mdx
@@ -51,7 +51,7 @@ Astro incluye compatibilidad con [TypeScript](https://www.typescriptlang.org/). 
 **Astro no realiza ninguna verificación de tipos por sí mismo.** La verificación de tipos debe realizarse al margen Astro, ya sea mediante el IDE o un script separado. Para chequeo de tipos en archivos Astro, puedes usar el [comando `astro check`](/es/reference/cli-reference/#astro-check).
 
 :::note[TypeScript y extensiones de archivos]
-Según las [reglas de resolución de módulos de Typescript](https://www.typescriptlang.org/docs/handbook/module-resolution.html), las extensiones `.ts` y `.tsx` no deben utilizarse a la hora de importar archivos de Typescript. En su lugar, utiliza las extensiones `.js`/`.jsx`, o bien puedes omitir la extensión del archivo completamente.
+Según las [reglas de resolución de módulos de TypeScript](https://www.typescriptlang.org/docs/handbook/module-resolution.html), las extensiones `.ts` y `.tsx` no deben utilizarse a la hora de importar archivos de TypeScript. En su lugar, utiliza las extensiones `.js`/`.jsx`, o bien puedes omitir la extensión del archivo completamente.
 
 ```ts
 import { getUser } from './user.js'; // user.ts
