--- a/src/content/docs/es/reference/api-reference.mdx
+++ b/src/content/docs/es/reference/api-reference.mdx
@@ -129,7 +129,7 @@ import Heading from '../components/Heading.astro';
 
 📚 Aprende acerca de cómo se manejan las props en las [Plantillas de Markdown y MDX](/es/guides/markdown-content/#layout-en-el-frontmatter).
 
-📚 Aprende cómo añadir [definiciones de tipos de Typescript para tus props](/es/guides/typescript/#props-de-componentes).
+📚 Aprende cómo añadir [definiciones de tipos de TypeScript para tus props](/es/guides/typescript/#props-de-componentes).
 
 ### `Astro.params`
 
