Update: framework-components.mdx link moved from オプション to インテグレーション
Co-authored-by: Kyosuke <kyosuke@users.noreply.github.com>

--- a/src/content/docs/ja/core-concepts/framework-components.mdx
+++ b/src/content/docs/ja/core-concepts/framework-components.mdx
@@ -11,7 +11,7 @@ Astroは[React](https://ja.reactjs.org/)、[Preact](https://preactjs.com/)、[Sv
 
 ## インテグレーションをインストール
 
-AstroはReact、Preact、Svelte、Vue、SolidJS、AlpineJS、Litのインテグレーションを[オプション](/ja/guides/integrations-guide/)として提供しています。1つまたは複数のAstroインテグレーションをプロジェクトにインストールし、設定できます。
+AstroはReact、Preact、Svelte、Vue、SolidJS、AlpineJS、Litの[インテグレーション](/ja/guides/integrations-guide/)をオプションとして提供しています。1つまたは複数のAstroインテグレーションをプロジェクトにインストールし、設定できます。
 
 ⚙️ Astroのインテグレーションをインストールし、設定するにあたっての詳細は[インテグレーションガイド](/ja/guides/integrations-guide/)をご覧ください。
 
